[package]
name = "limine"
version = "0.1.0"
edition = "2021"
description = "library for creating and parsing Limine Boot Protocol structures"
license = "BSD-3-Clause"
authors = ["xvanc <xvancm@gmail.com>"]
repository = "https://github.com/bolt-os/limine-rs"

[features]
default = []
bootloader = []
uuid = ["dep:uuid"]

[dependencies]
bitflags = "<2"
uuid = { version = "1.3", default-features = false, optional = true }
